# Poseidon

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  pyproject.toml
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  release.yml
config/: aegis.example.yaml  poseidon.example.yaml
docker/: Dockerfile  docker-compose.yml
docs/: api-configuration.md  architecture.md  broker-setup.md  configuration.md  debug-console.md  developer-guide.md  installation.md  plugin-development.md  risk-controls.md  security.md  terminal.md  troubleshooting.md  user-guide.md
docs/superpowers/plans/: 2026-07-04-paper-dry-run.md  2026-07-09-trading-terminal-embed.md  2026-07-14-analyst-debate-packet.md  2026-07-14-factor-research-lab.md  2026-07-14-local-model-brain.md  2026-07-14-model-tiering.md  2026-07-14-reflection-memory-loop.md  2026-07-15-launcher-lifecycle.md  2026-07-15-strategy-decay-tracking.md
examples/algorithms/: tqqq_day_trader.py  tqqq_ftlt.py  tqqq_long_term_strategy_v1.py  tqqq_long_term_strategy_v2.py
packaging/: PKGBUILD  aegis-trader.desktop  aegis-trader.service  poseidon.desktop  poseidon.service
src/aegis_trader/: __init__.py  app.py  cli.py  updater.py
src/aegis_trader/ai/: __init__.py  agent.py  reports.py  (+2 more)
src/poseidon/: __init__.py  app.py  cli.py  gui.py  launcher.py  proclife.py  updater.py
tests/: conftest.py
tests/frontend/: broker_toggle.test.js  debug_redaction.test.js  model_selector.test.js
tests/integration/: test_local_backend_cycle.py  test_order_flow.py  test_screener_cycle.py  test_terminal_live.py
tests/unit/: backend_fakes.py  test_account_chat.py  test_agent_backend.py  test_agent_parsing.py  test_ai_model_selector.py  test_alpaca_broker.py  test_alpaca_data_crypto.py  test_analysis_analysts.py  test_analysis_config.py  test_analysis_debate.py  test_analysis_models.py  test_analysis_packet_assemble.py  test_analysis_risk_lens.py  test_analysis_schedule.py  test_analysis_service.py  test_analysis_snapshot.py  test_analysis_storage.py  test_analysis_wiring.py  test_analytics.py  test_api_models.py  test_audit_analysis.py  test_audit_budget.py  test_audit_decay.py  test_audit_prune_wiring.py  test_audit_research.py  test_audit_shutdown.py  test_audit_sleeve.py  test_audit_storage.py  test_audit_watermark.py  test_autonomy_expiry.py  test_backend_anthropic.py  test_backend_base.py  test_backend_factory.py  test_backend_openai.py  test_backend_tiering.py  test_backtest.py  test_bars_multi.py  test_broker_order_caps.py  test_broker_toggle.py  test_broker_toggle_frontend.py  (+86 more)
tools/: ui_verify.py
(+228 files in other folders)
