[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "poseidon"
version = "2.2.0"
description = "Autonomous AI trading platform with Claude as the portfolio manager. Private, single-user, Linux-native."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Poseidon" }]
keywords = ["trading", "claude", "anthropic", "autonomous-agent", "portfolio"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "anthropic>=0.49",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "PyYAML>=6.0",
    "structlog>=24.1",
    "cryptography>=42.0",
    "aiosqlite>=0.20",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "croniter>=2.0",
    "python-dateutil>=2.9",
    "tzdata; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
    "types-python-dateutil",
]

[project.scripts]
poseidon = "poseidon.cli:main"

[project.entry-points."poseidon.brokers"]
# Third-party broker plugins register here; built-ins are discovered internally.

[project.entry-points."poseidon.data_providers"]
# Third-party market-data provider plugins register here.

[tool.hatch.build.targets.wheel]
packages = ["src/poseidon"]

# Ship the bundled example algorithms inside the installed package so first-run
# seeding works for a `pip install` (not just a source checkout). They land at
# poseidon/examples/algorithms, which app.py resolves relative to __file__.
[tool.hatch.build.targets.wheel.force-include]
"examples/algorithms" = "poseidon/examples/algorithms"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RET", "SIM", "PTH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
mypy_path = "src"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.coverage.run]
source = ["src/poseidon"]
